--- a/src/main/resources/templates/camera.html
+++ b/src/main/resources/templates/camera.html
@@ -8,6 +8,7 @@
 <body>
 	<section layout:fragment="content">
 		<h1 th:text="Camera"></h1>
+		<div id="barcode-scanner-viewport"></div>
     </section>
 </body>
 </html>
