Add keyword to "no search results found" page

--- a/src/main/resources/templates/noSearchResults.html
+++ b/src/main/resources/templates/noSearchResults.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<section layout:fragment="content">
-		<h1>No Search Results</h1>
+		<h1>No Search Results for &quot;<span th:text="${#httpServletRequest.getParameter('keyword')}"></span>&quot;</h1>
     </section>
 </body>
 </html>
