--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,7 +15,7 @@
     	}
     </script>
     
-    <link href="/assets/hf/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <!-- 
     <link href="/css/common-styles.jsp?__bts__=20160519103130" rel="stylesheet" type="text/css"/>
 	<link href="/css/persistent-list-styles.jsp" rel="stylesheet" type="text/css"/>
