Enable turbo-react

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -33,7 +33,7 @@
 	  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js" data-turbolinks-track="reload"></script>
 	  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js" data-turbolinks-track="reload"></script>
 	  <script type="text/javascript" src="/js/turbolinks.min.js" data-turbolinks-track="reload"></script>
-	  <!-- <script type="text/javascript" src="/js/turbo-react.min.js" data-turbolinks-track="reload"></script>  -->
+	  <script type="text/javascript" src="/js/turbo-react.min.js" data-turbolinks-track="reload"></script>
 	  <script type="text/javascript" src="/js/main.js" data-turbolinks-track="reload"></script>
   </head>
   <body>
