Style the login page login button

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     		<label for="email">Email: </label><input id="email" type="email" name="userName" /><br />
     		<label for="password">Password: </label><input id="password" type="password" name="password" />
     		<input name="dest" th:value="${dest}" type="hidden">
-    		<input type="submit" value="Login" />
+    		<input type="submit" value="Login" class="btn" />
     	</form>
     </section>
 </body>
