--- a/src/main/resources/templates/manifest.html
+++ b/src/main/resources/templates/manifest.html
@@ -15,6 +15,8 @@
 	    if (window.applicationCache.status === window.applicationCache.UPDATEREADY) {
 	    	onUpdateReady();
 	    }
+	    
+	    window.applicationCache.update();
     </script>
 </head>
 <body>
