Turbolinks replace the "try again" link on the offline page

--- a/src/main/resources/templates/offline.html
+++ b/src/main/resources/templates/offline.html
@@ -8,7 +8,7 @@
 <body>
 	<section layout:fragment="content">
 		<h1>Offline</h1>
-    	You are currently offline. <a class="offlineReload">Please try again</a>.
+    	You are currently offline. <a class="offlineReload" data-turbolinks-action="replace">Please try again</a>.
     </section>
 </body>
 </html>
