--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -118,8 +118,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">PoC by Isobar</h5>
+          <p class="grey-text text-lighten-4">It's far from perfect. It isn't exactly pretty. But, it demonstrates solutions to some important technical challenges.</p>
 
 
         </div>
