Re-enable custom styling for the "HannafordAndroid/" user agent

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,7 +14,7 @@
     
     <script type="text/javascript">
     	if(navigator.userAgent.indexOf("HannafordAndroid/")>0){
-    		//document.documentElement.className += ' native-app android-app';
+    		document.documentElement.className += ' native-app android-app';
     	}
     </script>
     
