In shell, wait to redirect until document ready so Turbolinks is fully loaded

--- a/src/main/resources/templates/shell.html
+++ b/src/main/resources/templates/shell.html
@@ -9,9 +9,11 @@
 	<section layout:fragment="content">
 		<!-- Just an empty shell -->
 		<script type="text/javascript">
-			if(location.hash){
-				Turbolinks.visit(location.hash.substr(1), { action: "replace" });
-			}
+			$(document).ready(function(){
+				if(location.hash){
+					Turbolinks.visit(location.hash.substr(1), { action: "replace" });
+				}
+			});
 		</script>
     </section>
 </body>
