--- a/src/main/resources/templates/shell.html
+++ b/src/main/resources/templates/shell.html
@@ -9,7 +9,7 @@
 	<section layout:fragment="content">
 		<!-- Just an empty shell -->
 		<script type="text/javascript">
-			$(document).ready(function(){
+			$(document).one('turbolinks:load',function(){
 				if(location.hash){
 					Turbolinks.visit(location.hash.substr(1), { action: "replace" });
 				}
